--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             dapatkan informasi planet planet yang ada di tata surya kita .</h2>
        <p>Mengenal planet dan sistem tata surya kita</p>
      
-    <a href="https://fardanathilla.github.io/Simulasi-Tata-Surya/"><button class="button"><strong> Simulasi Sistem Tata Surya </strong></button></a>
+    <a href="https://fardanathilla.github.io/SimulasiTataSurya/"><button class="button"><strong> Simulasi Sistem Tata Surya </strong></button></a>
     <a href="https://youtu.be/RGT7KcGSQtw"><button class="button"><i class="fa-regular fa-circle-play"></i><strong> Lihat Penjelasan </strong></i></button></a>  
     </section>
 </article>
